# agentic-ai-course

./: .gitignore  COMPARISON.md  README.md  pyproject.toml
00-setup/: README.md  advanced_agent.py  hello_agent.py
01-langgraph/: BLOG_POST.md  README.md  exercises.md  lesson_1_graph_basics.py  lesson_2_tools_hitl.py  lesson_3_memory.py  project_workflow_v1.py
01-langgraph/solutions/: README.md
02-openai-agents/: README.md  exercises.md  lesson_1_agents_tools.py  lesson_2_handoffs_guardrails.py  project_workflow_v2.py
02-openai-agents/solutions/: README.md
03-crewai/: README.md  exercises.md  lesson_1_crews_tasks.py  lesson_2_tools_memory.py  project_workflow_v3.py
03-crewai/solutions/: README.md
04-production/: README.md  evals.py  security_prompt_injection.py  tracing_langfuse.py
05-capstone/: README.md  capstone_agent.py  cli.py  safety.py
05-capstone/integrations/: __init__.py  crm_store.py  gcal.py  gmail.py
05-capstone/tests/: test_crm.py  test_safety.py
shared/: __init__.py  eval_harness.py  llm.py  mock_apis.py
shared/fixtures/: contacts.json  events.json  golden_tasks.json  inbox.json
